// Observer インターフェースの代替
interface ModelObserver {
  void update(DrawModel model);
}
